fixed layout issues

--- a/web/symbols.css
+++ b/web/symbols.css
@@ -2,7 +2,7 @@
   font-family: 'Material Icons Round-Regular';
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
+  font-display: block;
   src: url('symbols.woff2') format('woff2');
 }
 
